--- a/performance-optimization/KEDA/app-deployment/deployment.yaml
+++ b/performance-optimization/KEDA/app-deployment/deployment.yaml
@@ -17,6 +17,13 @@ spec:
         image: devopsthehardway.azurecr.io/pywebamd:latest
         ports:
         - containerPort: 5001
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "500m"
 ---
 apiVersion: v1
 kind: Service
